--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="editable" data-edit="text">Staff <span>Minecraft</span></h1>
-                    <h2 class="editable" data-edit="text">Charlie Roleplay</h2>
-                    <p class="editable" data-edit="text">Benvenuto nel mio portfolio professionale che mostra la mia esperienza come membro dello staff sul server Minecraft Charlie Roleplay.</p>
+                    <h1 class="editable" data-edit="text">Staff <span>Experiences</span></h1>
+                    <h2 class="editable" data-edit="text">Xkiller85</h2>
+                    <p class="editable" data-edit="text">Benvenuto nel mio portfolio professionale che mostra la mia esperienza come membro dello staff sui server Minecraft.</p>
                     <div class="hero-btns">
                         <a href="#esperienza" class="btn btn-primary">Scopri di più</a>
                         <a href="#contatti" class="btn btn-secondary">Contattami</a>
